<?xml version="1.0"?>

<package format="2">

  <name>transport_box_loc</name>
  <version>0.5.0</version>
  <description>ICP localization in a transport box</description>

  <license>BSD</license>

  <author email="yuying.jin@tmirob.com">yuying.jin</author>
  <maintainer email="yuying.jin@tmirob.com">yuying.jin</maintainer>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>libgoogle-glog-dev</depend>
  <depend>ros-noetic-eigen-conversions</depend>
  <depend>ros-noetic-tf-conversions</depend>
  <depend>ros-noetic-tf2-geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roslib</depend>
  <depend>libpointmatcher</depend>
  

</package>
